--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@ font-size: 55%;
 
             <input type="button" value=" 00 " onclick="form.answer.value +='00'">
             <input type="button" value=" 0 " onclick="form.answer.value +='0'">
-            <input type="button" value=" . " onclick="form.answer.value +=''">
-            <input type="button" value=" = " onclick="form.answer.value =eval(form.answer.value) ">
+            <input type="button" value=" . " onclick="form.answer.value +='.'">
+            <input type="button" value=" E
+                                        
+                                      nter " onclick="form.answer.value =eval(form.answer.value) ">
         </form>
     </div>
 </body>
