--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> Calculator </title>
     <style>
         body {
-            background-color: slateblue;
+            background-color: #d1d8e0;
 
         }
         html{
@@ -30,8 +30,8 @@
         }
 
         input {
-            color: white;
-            background-color: black;
+            color: black;
+            background-color: rgb(255, 159, 243);
             width: 14rem;
             height: 6rem;
             font-size: 1.5rem;
